fix: remove debug logging, add jlink step in package task